<resources>
    <string name="app_name">Readme</string>
    <!-- 온보딩 -->
    <string name="skip">건너뛰기</string>
    <string name="onboard_title_1">타인의 독서 기록을\n통한 짧은 독서</string>
    <string name="onboard_title_2">간편한 독서 기록</string>
    <string name="onboard_title_3">나만의 공간에 보관하기</string>
    <string name="onboard_content_1">다른 사람들이 어떤 책을 읽고,\n무엇을 느꼈는지 한 눈에 보아요</string>
    <string name="onboard_content_2">책에서 인상 깊은 문장과\n느낀 점만 작성하면 돼요</string>
    <string name="onboard_content_3">독서 당시의 울림을 오래 소장해 보아요</string>

    <!--로그인-->
    <string name="login_explain"><b>간단한 회원가입</b>으로 리드미를 시작해볼까요?</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="naver_login">네이버 아이디로 로그인</string>

    <!-- home -->
    <string name="home_feed_empty">관련 카테고리 글이 아직 없어요</string>
    <string name="lookaround_another_category">다른 카테고리를 둘러보는 것은 어떨까요?</string>

    <!-- 더보기 -->
    <string name="readme_mail_address">Readme.team.sopterm@gmail.com</string>
    <string name="problem_occured">문제가 발생했습니다.</string>
    <string name="mail_title">리드미 유저 신고</string>
    <string name="mail_text">1. 신고 유형 사유 (상업적 광고 및 판매, 음란물/불건전한 대화, 욕설 및 비하, 도배, 부적절한 프로필 이미지, 기타 사유):\n2.신고할 유저의 닉네임 :\n\n신고하신 사항은 리드미팀이 신속하게 처리하겠습니다. 감사합니다 :)</string>

    <!--마이페이지-->
    <string name="user_bookshelf">님의 책장</string>
    <string name="total">총</string>
    <string name="text_exist">의 글이 있어요</string>
    <string name="essay">에세이</string>
    <string name="feed_empty">작성한 글이 없어요</string>
    <string name="plz_plus_add">아래 + 버튼을 눌러 글을 추가해 보세요</string>
    <string name="report">신고하기</string>
    <string name="delete">삭제하기</string>
    <string name="setting">환경설정</string>
    <string name="inquire">문의하기</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="logout">로그아웃</string>
    <string name="delete_user">회원탈퇴</string>
    <string name="inquire_subject">리드미 문의하기</string>
    <string name="inquire_body">문의 사유가 무엇인가요?\n문의사항은 리드미팀이 신속하게 처리하겠습니다.\n감사합니다</string>
    <string name="logout_dialog_title">정말 로그아웃 하시겠습니까?</string>
    <string name="logout_dialog_content">로그인 페이지로 이동합니다</string>
    <string name="delete_user_dialog_title">정말 탈퇴 하시겠습니까?</string>
    <string name="delete_user_dialog_content">탈퇴한 계정은 복구되지 않습니다</string>
    <string name="count">%d개</string>

    <string-array name="email_array">
        <item name="readme_email">Readme.team.sopterm@gmail.com</item>
    </string-array>

    <!--tools-->
    <string name="nickname_example">강젼희정예서88</string>
    <string name="number_example">5개</string>
    <string name="book_title_example">1cm 다이빙</string>
    <string name="date_example">2021/10/31</string>
    <string name="impressive_sentence_example">\'스마트폰보다 재미있는게 있을까\'\n이것만큼 어려운 주제가 없다는 것을 안다. 하지만 그래도 답하고 싶었던 이유는, 카톡 속ㅋㅋㅋ가 아닌, 실제로 웃을 수 있는 상황을 바랐기 때문이 아닐까</string>
    <string name="takeaway_example">나만의 시간을 보내고 싶어서 휴학을 했어요. 하지만 밤새 유튜브 보고 새벽 5시에 잠들고 오후 3시에 일어나는게 반복돼요. 스마트폰이 제 시간을 뺏어간다는 느낌이 들어 회의감이 자주 들었어요. 그래서 저 문장이 유독 공감갔고, \'스마트폰보다 재미있는게 있을까\'란 질문에 생각을 해봤지만 생각이 잘 안나더라구용. 한번....</string>
    <string name="writer_example">부동산읽어주는남자(정태익) 저 </string>

    <!--닉네임 설정-->
    <string name="set_nickname_title">닉네임을 알려주세요</string>
    <string name="set_nickname_explain">설정된 닉네임은 수정이 불가합니다.</string>
    <string name="set_nickname_hint">특수문자는 사용할수 없습니다.</string>
    <string name="set_nickname_duplicate_button">중복확인</string>
    <string name="set_nickname_length_limit">/7</string>
    <string name="set_nickname_start_button">시작하기</string>
    <string name="set_nickname_over_text_limit">닉네임은 7자를 초과 할 수 없습니다.</string>
    <string name="set_nickname_no_special_character">특수문자 및 공백은 사용할 수 없습니다.</string>
    <string name="set_nickname_duplicate_nickname">중복된 닉네임입니다.</string>
    <string name="set_nickname_allowed_nickname">사용 가능한 닉네임입니다.</string>

    <!--BookSearch-->
    <string name="select_book_title">책 선택하기</string>
    <string name="book_search_hint">책 제목을 검색하세요</string>
    <string name="recent_read">최근에 읽었어요</string>
    <string name="try_book_search">책을 검색하고 읽은 책을 추가해보세요</string>
    <string name="book_search_no_list">책 검색 결과가 없습니다</string>

    <!--feedWrite-->
    <string name="feed_write_title">님의 시작을 응원해요!</string>
    <string name="choose_category_content">어떤 종류의 책을 읽으셨나요?\n가장 어울리는 카테고리를 선택해주세요.</string>
    <string name="impressive_sentence_content">기록은 독서의 시작입니다. 책을 끝까지 읽지 못했더라도\n읽는 도중 인상 깊었던 문장을 적어보세요.</string>
    <string name="feeling_content">진정한 독서를 하기 원한다면, 인상 깊었던 문장에 대한\n느낀점도 남겨볼까요?</string>
    <string name="next_btn_text">다음</string>

    <!--write-feed-->
    <string name="choose_category_title">책의 카테고리를 선택해주세요</string>
    <string name="impressive_sentence_title">인상 깊었던 문장을 적어주세요</string>
    <string name="impressive_sentence_hint">어떤 문장이 인상 깊었나요?</string>
    <string name="book_info_title">내가 선택한 책</string>
    <string name="feeling_title">느낀점을 적어주세요</string>
    <string name="feeling_hint">책을 읽었을 때 무엇을 느끼고 배우셨나요?</string>
    <string name="impressive_sentence_at_feeling">에서 인상 깊었던 문장</string>
    <string name="post_feed_title_first">기록을 통해&#160;</string>
    <string name="post_feed_title_second">&#160;님의 하루가</string>
    <string name="post_feed_title_third">더 풍요로워졌길 바라요!</string>
    <string name="post_feed_btn_next_text">등록하기</string>
    <string name="register_done_title">등록을 완료했어요</string>
    <string name="register_done_content_first">피드&#160;</string>
    <string name="register_done_content_second">와&#160;</string>
    <string name="register_done_content_third">마이페이지&#160;</string>
    <string name="register_done_content_fourth">에서</string>
    <string name="register_done_content_fifth">작성한 감상글을 확인할 수 있어요</string>
    <string name="register_done_button">피드 구경하러 가기</string>
    <string name="write_feed_dialog_title">기록한 내용을 버리고\n돌아가시겠습니까?</string>
    <string name="write_feed_dialog_content">작성한 내용이 저장되지 않습니다</string>
    <string name="write_feed_dialog_cancel">취소</string>
    <string name="write_feed_dialog_check">확인</string>

    <!-- toast -->
    <string name="delete_feed_success">피드 삭제 성공</string>
    <string name="delete_feed_fail">피드 삭제 실패</string>
</resources>
