<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="book"
            type="com.readme.android.domain.entity.BookInfo" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_book"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@{book.image}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_writer"
            app:layout_constraintDimensionRatio="56:82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_category"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="서버한테 데이터 달라고 해둠"
            android:textAppearance="@style/regular_05"
            android:textColor="@color/main_blue"
            app:layout_constraintStart_toEndOf="@+id/iv_book"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/essay" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@{book.title}"
            android:textAppearance="@style/medium_04"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"
            tools:text="@string/book_title_example" />

        <TextView
            android:id="@+id/tv_writer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{book.author}"
            android:textAppearance="@style/regular_05"
            android:textColor="@color/gray_3"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/writer_example" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>